# advent-of-code-23

./: .flake8  .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  issues.yml
advent_of_code/dec_1/: README.md  calibrator.py
advent_of_code/dec_2/: README.md  dice_game.py
src/advent-of-code-23/dec-1/: calibrator.py
tests/: test_calibrator.py  test_dice_game.py
