[tool.poetry]
name = "python-template"
version = "0.0.1"
description = "A template for Python projects"
authors = ["Full Fact <afc@fullfact.org>"]
maintainers = ["Full Fact <afc@fullfact.org>"]
readme = "README.md"
license = "Proprietary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
structlog = "^23.1.0"
pydantic = "^2.4.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
debugpy = "^1.6.7"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = "True"
disallow_untyped_calls = "True"
check_untyped_defs = "True"