[tool.poetry]
name = "advent-of-code-23"
version = "0.0.1"
description = "A template for Python projects"
authors = ["Cameron Johnston <cameronjohnston53@outlook.com>"]
maintainers = ["Cameron Johnston <cameronjohnston53@outlook.com>"]
readme = "README.md"
license = ""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
structlog = "^23.1.0"
pydantic = "^2.4.1"
numpy = "^1.26.2"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
debugpy = "^1.6.7"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = "True"
disallow_untyped_calls = "True"
check_untyped_defs = "True"